--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -36,7 +36,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:textSize="@dimen/font_46"
-                android:padding="@dimen/padding_xxxl"
+                android:padding="@dimen/padding_24"
                 android:gravity="center"
                 android:textColor="@color/colorAccent"
                 android:textStyle="italic"
