--- a/app/src/main/res/layout/fragment_pizzas.xml
+++ b/app/src/main/res/layout/fragment_pizzas.xml
@@ -19,4 +19,16 @@
         style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
         android:indeterminate="true" />
 
+
+    <ImageView
+        android:id="@+id/new_pizza"
+        android:layout_width="@dimen/fab_size"
+        android:layout_height="@dimen/fab_size"
+        android:layout_margin="@dimen/padding_16"
+        android:layout_gravity="bottom|right"
+        android:src="@drawable/floating"
+        android:scaleType="centerInside"
+        android:elevation="2dp"
+        />
+
 </android.support.design.widget.CoordinatorLayout>
