--- a/app/src/main/res/layout/pizza_item.xml
+++ b/app/src/main/res/layout/pizza_item.xml
@@ -50,6 +50,31 @@
             android:textColor="@color/text_white"
             android:textSize="@dimen/font_13"
             />
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginTop="@dimen/padding_16"
+            android:background="@drawable/rounded_rectangle_orange"
+            android:padding="@dimen/padding_6">
+
+            <ImageView
+                android:layout_width="@dimen/pizza_item_cart_size"
+                android:layout_height="@dimen/pizza_item_cart_size"
+                android:src="@drawable/cart_small"
+                android:layout_gravity="center_vertical"/>
+
+            <TextView
+                android:id="@+id/price"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:textColor="@color/text_white"
+                android:layout_marginLeft="@dimen/padding_6"
+                android:textStyle="bold"
+                android:textSize="@dimen/font_16"/>
+
+        </LinearLayout>
     </LinearLayout>
 
 </FrameLayout>
