--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,6 @@
 <resources>
     <dimen name="padding_3">3dp</dimen>
+    <dimen name="padding_6">6dp</dimen>
     <dimen name="padding_9">9dp</dimen>
     <dimen name="padding_16">16dp</dimen>
     <dimen name="padding_19">19dp</dimen>
@@ -23,4 +24,5 @@
     <dimen name="fab_size">56dp</dimen>
     <dimen name="pizzas_recyclerview_bottom_padding">88dp</dimen>
     <dimen name="fab_elevation">6dp</dimen>
+    <dimen name="pizza_item_cart_size">18dp</dimen>
 </resources>
