--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -60,8 +59,8 @@
     <ProgressBar
         android:id="@+id/loading"
         android:layout_width="match_parent"
-        android:layout_height="8dp"
-        android:padding="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/height_toolbar"
         style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
         android:indeterminate="true" />
 
