--- a/app/src/main/res/layout/fragment_drinks.xml
+++ b/app/src/main/res/layout/fragment_drinks.xml
@@ -15,8 +15,7 @@
     <ProgressBar
         android:id="@+id/loading"
         android:layout_width="match_parent"
-        android:layout_height="8dp"
-        android:padding="0dp"
+        android:layout_height="wrap_content"
         style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
         android:indeterminate="true" />
 
