fixed title on Cart Activity

--- a/app/src/main/res/layout/toolbar_cart.xml
+++ b/app/src/main/res/layout/toolbar_cart.xml
@@ -11,7 +11,7 @@
 
         <TextView
             style="@style/title_toolbar"
-            android:text="@string/main_title"
+            android:text="@string/cart"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"/>
 
